# bot

./: .env.example  .gitignore  ASYNC_MIGRATION_DIAGNOSIS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  debug_tools.py  docker-compose.yml  inspect_langchain_playwright.py  package-lock.json  package.json  pyproject.toml  test_fb_post.py  tsconfig.json
.playwright-mcp/: facebook-login-attempt
config/: .env.example  bot-config.json
docs/: code-standards.md  codebase-summary.md  getting-started.md  persona-guide.md  project-overview-pdr.md  system-architecture.md
examples/: cookie-import.ts
facebook_surfer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
plan/facebook-surfer-option-b-20260111-051531/: README.md  plan.md
plan/research-async-migration-20260112/: README.md  async-playwright-migration.md
plan/research-deepagents-20250114/: README.md  debugging-guide.md  findings.md  quick-reference.md
skills/facebook-automation/: SKILL.md
src/: _test-agentic-integration.ts.backup  bot.ts  demo-ai-agent.ts  demo_tools.py  facebook_post_onlyme.py  facebook_post_tools.py  main.py  profile-manager.ts  run-human-login.ts  test-mcp-architecture.ts
src/agents/: __init__.py  facebook_surfer.py
src/automation/: human-in-loop-login.ts  login.ts  mcp-playwright-tools.ts
src/mcp-tools/: mcp-tools-manager.ts
src/session/: __init__.py
tests/: __init__.py  test_facebook_surfer.py  test_interaction_tools.py  test_navigation_tools.py  test_output_formatting.py  test_session.py  test_tools_conversion.py  test_vision_tools.py  test_workflows.py
(+33 files in other folders)
